Smaller body to stop horizontal scroll on mobile

--- a/responsive.css
+++ b/responsive.css
@@ -25,7 +25,6 @@
 }
 .mainBody
 {
-	width:280px;
 	padding-left:25px;
 	padding-right:25px;
 }
